--- a/Chalkable.Web/assets/jade/activities/profile/SchedulingPage.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/SchedulingPage.jade
@@ -1,17 +1,10 @@
 schedule = self.getSchedule()
 .loader-container
     .loader
-    .action-bar.not-transparent.buttons
-        .container.panel-bg
-            .left
-                cotroller = self.getRoleController(schedule.getRoleName());
-                +ActionLink(cotroller, 'details', schedule.getId()) Now
-                +ActionLink(cotroller, 'info', schedule.getId()) Info
-                +ActionLink(cotroller, 'schedule', schedule.getId()).pressed Scheduling
-                +ActionLink(cotroller, 'details', schedule.getId()) Apps
+    +UserProfileTopBar(self, 'schedule')
     +RenderWith(self.getCalendar(), chlk.templates.calendar.announcement.DayPage)(
         notMainCalendar = true,
-        controllerName = cotroller,
+        controllerName = self.getControllerName(),
         actionName = 'schedule',
         params = [schedule.getId().valueOf()]
     )
