--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -406,6 +406,9 @@ TEXTAREA.animated-textarea{
   }
 
   .grey-button{
+    color: #51595d;
+    text-decoration: none;
+    font-size: 11px;
     text-align: center;
     min-width: 57px;
     height: 12px;
