--- a/Chalkable.Web/assets/sass/partials/controls/_left-right-toolbar.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_left-right-toolbar.scss
@@ -72,6 +72,19 @@
         background: #233036;
       }
     }
+
+    &.rounded{
+      A{
+        margin: 2px;
+        width: 6px;
+        height: 7px;
+        background: url(images/profile/dots.png) 0 0 no-repeat;
+
+        &.current {
+          background-position: -12px 0;
+        }
+      }
+    }
   }
 
   .first-container{
