--- a/Chalkable.Web/assets/sass/partials/main/_grading.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_grading.scss
@@ -4,150 +4,215 @@ BODY {
       DIV#content-wrapper{
         #main-wrapper {
           #main{
-            .marking-period-container{
-              padding-top: 3px;
+            .mps-container{
+              width: 661px;
 
-              &.open{
-                .collapse{
-                  @include transform(rotate(90deg));
+              .marking-period-container{
+                padding-top: 3px;
+
+                &.open{
+                  .collapse{
+                    @include transform(rotate(90deg));
+                  }
                 }
-              }
 
-              &:not(.open){
+                &:not(.open){
+                  .mp-data{
+                    visibility: hidden;
+                    height: 0;
+                  }
+                }
+
+                .lr-toolbar {
+                  height: auto;
+                  overflow: visible;
+
+                  .paginator{
+                    bottom: -22px;
+                  }
+                }
+
+                .mp-title{
+                  font: bold 16px Arial;
+                  color: #2f7790;
+                  text-align: center;
+                  padding: 25px 0 16px;
+                  cursor: pointer;
+                  background: url(images/grading/mp-title-bg.png);
+                  position: relative;
+
+                  .collapse{
+                    position: absolute;
+                    right: 22px;
+                    top: 17px;
+                    width: 28px;
+                    height: 28px;
+                    background: url(images/grading/mp-collapse.png);
+                  }
+                }
+
                 .mp-data{
-                  visibility: hidden;
-                  height: 0;
+                  background: url(images/grading/mp-title-bottom.png) 0px bottom no-repeat;
+                  overflow: hidden;
+                  //@include transition-property("height");
+                  //@include transition-duration("0.5s");
+
+                  .ann-types-container{
+                    border: 1px solid #c8c8c8;
+                    border-width: 0 1px;
+                    margin: 0 17px 0 14px;
+                    white-space: nowrap;
+
+                    .lr-toolbar{
+                      margin-bottom: 30px;
+                    }
+
+                    .arrow{
+                      height: 281px;
+                      width: 34px;
+                      top: 7px;
+                      z-index: 2;
+
+                      &.next-button {
+                        right: 8px;
+                        background: url(images/grading/right-arrow.png) 0 0 no-repeat;
+                      }
+
+                      &.prev-button {
+                        left: 8px;
+                        background: url(images/grading/left-arrow.png) 0 0 no-repeat;
+                      }
+
+                      &:hover{
+                        opacity: 0.8;
+                      }
+
+                      &.disabled{
+                        display: none;
+                      }
+                    }
+
+                    .ann-type-container{
+                      display: table-cell;
+                      text-align: center;
+                      min-width: 125px;
+                      vertical-align: top;
+                      height: 288px;
+
+                      &:not(:last-child):not(:nth-child(5n)){
+                        background: url(images/grading/dot.png) right 0 repeat-y;
+                      }
+
+                      .type-name{
+                        font: bold 16px Arial;
+                        color: #4d4d4d;
+                        margin: 5px 0 20px 0;
+                        position: relative;
+                      }
+
+                      .announcements-type-item{
+                        position: relative;
+
+                        .ann-button{
+                          width: 76px;
+                          line-height: 35px;
+                          border: 1px solid #b3b3b3;
+                          @include border-radius(4px);
+                          @include background(linear-gradient(top, #f5f5f5, #e0e0e0));
+                          @include box-shadow(0 1px 0 0 #fff inset, 0 1px 2px 0px #999);
+                          text-align: center;
+                          font: bold 12px Arial;
+                          display: block;
+                          text-decoration: none;
+                          color: #3d3d3d;
+                          text-shadow: 1px 1px 0 white;
+                          padding: 9px 0;
+                          margin: 7px auto;
+
+                          &:hover{
+                            @include background(linear-gradient(top, #e5e5e5, #d0d0d0));
+                          }
+
+                          &.plus-ann{
+                            @include background(url(images/grading/plus.png) center center no-repeat,linear-gradient(top, #f5f5f5, #e0e0e0));
+                            height: 14px;
+
+                            &:hover{
+                              @include background(url(images/grading/plus.png) center center no-repeat,linear-gradient(top, #e5e5e5, #d0d0d0));
+                            }
+                          }
+
+                          &.dropped{
+                            @include box-shadow(0 1px 0 0 #ddaaaa inset, 0 1px 2px 0px #999);
+                            @include background(linear-gradient(top, #c57272, #a64e4e));
+                            border: 1px solid #8e3e3e;
+                            text-shadow: none;
+                            color: white;
+
+                            &:hover{
+                              @include background(linear-gradient(top, #b56262, #963e3e));
+                            }
+                          }
+
+                          &.absolute{
+                            position: absolute;
+                            z-index: -1;
+                            margin: 0 25px;
+                            height: 16px;
+                          }
+                        }
+                      }
+                    }
+                  }
                 }
               }
+            }
+          }
+        }
 
-              .lr-toolbar {
-                height: auto;
-              }
+        &.profile{
+          #main-wrapper{
+            #main{
+              .mps-container{
+                margin-top: 50px;
 
-              .mp-title{
-                font: bold 16px Arial;
-                color: #2f7790;
-                text-align: center;
-                padding: 25px 0 16px;
-                cursor: pointer;
-                background: url(images/grading/mp-title-bg.png);
-                position: relative;
+                .marking-period-container{
+                  .mp-title {
+                    background: url(images/grading/mp-title-bg-profile.png) 0 -3px;
 
-                .collapse{
-                  position: absolute;
-                  right: 22px;
-                  top: 17px;
-                  width: 28px;
-                  height: 28px;
-                  background: url(images/grading/mp-collapse.png);
-                }
-              }
-
-              .mp-data{
-                background: url(images/grading/mp-title-bottom.png) 0px bottom no-repeat;
-                padding-bottom: 30px;
-                overflow: hidden;
-                @include transition-property("height");
-                @include transition-duration("0.2s");
-
-                .ann-types-container{
-                  border: 1px solid #c8c8c8;
-                  border-width: 0 1px;
-                  margin: 0 17px 0 14px;
-                  white-space: nowrap;
-
-                  .arrow{
-                    height: 281px;
-                    width: 34px;
-                    top: 7px;
-                    z-index: 2;
-
-                    &.next-button {
-                      right: 8px;
-                      background: url(images/grading/right-arrow.png) 0 0 no-repeat;
-                    }
-
-                    &.prev-button {
-                      left: 8px;
-                      background: url(images/grading/left-arrow.png) 0 0 no-repeat;
-                    }
-
-                    &:hover{
-                      opacity: 0.8;
-                    }
-
-                    &.disabled{
-                      display: none;
+                    .collapse {
+                      background: url(images/grading/mp-collapse-profile.png);
                     }
                   }
 
-                  .ann-type-container{
-                    display: table-cell;
-                    text-align: center;
-                    min-width: 125px;
-                    vertical-align: top;
-                    height: 288px;
+                  .mp-data{
+                    background: url(images/grading/mp-title-bottom-profile.png) 0px bottom no-repeat;
 
-                    &:not(:last-child):not(:nth-child(5n)){
-                      background: url(images/grading/dot.png) right 0 repeat-y;
-                    }
+                    .ann-types-container {
+                      border-color: #bfaa69;
 
-                    .type-name{
-                      font: bold 16px Arial;
-                      color: #4d4d4d;
-                      margin: 5px 0 20px 0;
-                      position: relative;
-                    }
+                      .type-name{
+                        color: #532f18;
+                      }
 
-                    .announcements-type-item{
-                      position: relative;
-
-                      .ann-button{
-                        width: 76px;
-                        line-height: 35px;
-                        border: 1px solid #b3b3b3;
-                        @include border-radius(4px);
-                        @include background(linear-gradient(top, #f5f5f5, #e0e0e0));
-                        @include box-shadow(0 1px 0 0 #fff inset, 0 1px 2px 0px #999);
-                        text-align: center;
-                        font: bold 12px Arial;
-                        display: block;
-                        text-decoration: none;
-                        color: #3d3d3d;
-                        text-shadow: 1px 1px 0 white;
-                        padding: 9px 0;
-                        margin: 7px auto;
-
-                        &:hover{
-                          @include background(linear-gradient(top, #e5e5e5, #d0d0d0));
-                        }
-
-                        &.plus-ann{
-                          @include background(url(images/grading/plus.png) center center no-repeat,linear-gradient(top, #f5f5f5, #e0e0e0));
-                          height: 14px;
+                      .announcements-type-item{
+                        .ann-button:not(.dropped) {
+                          border: 1px solid #b3a066;
+                          color: #40220f;
+                          @include background(linear-gradient(top, #f3efe7, #ded4c1));
 
                           &:hover{
-                            @include background(url(images/grading/plus.png) center center no-repeat,linear-gradient(top, #e5e5e5, #d0d0d0));
+                            @include background(linear-gradient(top, #e3dfd7, #cec4b1));
                           }
-                        }
 
-                        &.dropped{
-                          @include box-shadow(0 1px 0 0 #ddaaaa inset, 0 1px 2px 0px #999);
-                          @include background(linear-gradient(top, #c57272, #a64e4e));
-                          border: 1px solid #8e3e3e;
-                          text-shadow: none;
-                          color: white;
+                          &.plus-ann{
+                            @include background(url(images/grading/plus-profile.png) center center no-repeat,linear-gradient(top, #f3efe7, #ded4c1));
+                            height: 14px;
 
-                          &:hover{
-                            @include background(linear-gradient(top, #b56262, #963e3e));
+                            &:hover{
+                              @include background(url(images/grading/plus-profile.png) center center no-repeat,linear-gradient(top, #e3dfd7, #cec4b1));
+                            }
                           }
-                        }
-
-                        &.absolute{
-                          position: absolute;
-                          z-index: -1;
-                          margin: 0 25px;
-                          height: 16px;
                         }
                       }
                     }
@@ -169,12 +234,15 @@ BODY {
   width: 200px;
   padding-left: 0;
 
-  .chart-container{
-    height: 100px;
-    background: url(images/grading/small-chart.png) 26px 8px no-repeat;
+  .grading-pop-up{
+    text-align: center;
+    >DIV.chart-container{
+      height: 100px;
+      background: url(images/grading/small-chart.png) 26px 8px no-repeat;
 
-    &.small{
-      background: url(images/grading/small-chart.png) 20px 8px no-repeat;
+      &.small{
+        background: url(images/grading/small-chart.png) 20px 8px no-repeat;
+      }
     }
   }
 }
