fix in student profile grading

--- a/Chalkable.Web/assets/jade/activities/student/StudentProfileGradingView.jade
+++ b/Chalkable.Web/assets/jade/activities/student/StudentProfileGradingView.jade
@@ -10,5 +10,5 @@ user = self.getUser()
                         +PersonImg(user, 64)
                 h1.profile-person-name=user.getDisplayName()
             h2.mp-conteiner
-                div
+                lable=self.getMarkingPeriod().getName()
             .grading-info
