--- a/Chalkable.Web/assets/sass/partials/main/_attendance.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_attendance.scss
@@ -3,7 +3,7 @@ BODY {
     >DIV#content {
       DIV#content-wrapper{
         .export-btn {
-          background-image: url(images/buttons/export.png);
+          background: url(images/buttons/export.png) center center no-repeat;
           height: 26px;
           width: 28px;
         }
