--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementAppAttachments.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementAppAttachments.jade
@@ -10,18 +10,18 @@ if self.needButtons
         button.simple-gray-button.file Attach File
             +FileUpload('announcement', 'uploadAttachment', [self.getId().valueOf()])#add-attachment.simple-gray-button
 each attachment, i in attachments
-    div(data-id=attachment.getId(), data-url="viewurl").announcement-item.attachment
+    .announcement-item.attachment
         if self.needDeleteButton
             +ActionLink('announcement', 'deleteAttachment', attachment.getId()).close-btn
-        +LoadingImage(src=attachment.getThumbnailUrl(), id="loading-image-" + i)
-        .title
-            div=attachment.getName()
+        +ActionLink('announcement', 'viewAttachment', attachment.getId())
+            +LoadingImage(src=attachment.getThumbnailUrl(), id="loading-image-" + i)
+            .title
+                div=attachment.getName()
 
 each app, i in applications
     viewUrl = self.isGradable() && !self.needDeleteButton ? app.getGradingViewUrl() : app.getViewUrl()
     appMode = self.isGradable() && !self.needDeleteButton ? chlk.models.apps.AppModes.GRADINGVIEW : chlk.models.apps.AppModes.VIEW
     appUrl = app.getUrl()
-    -console.log(appUrl)
     div.announcement-item.application
         if self.needDeleteButton
             +ActionLink('announcement', 'deleteApp', app.getAnnouncementApplicationId()).close-btn
