--- a/Chalkable.Web/assets/sass/partials/main/profile/_student_profile_grading.scss
+++ b/Chalkable.Web/assets/sass/partials/main/profile/_student_profile_grading.scss
@@ -14,10 +14,106 @@ BODY {
                   margin-left: 13px;
                   margin-top: 10px;
                   margin-bottom: 10px;
+                  vertical-align: top;
                 }
                 .prev-button, .next-button{
                   z-index: 2;
                   top: 20px;
+                }
+              }
+
+              .section-info{
+                width: 100%;
+
+                .new-grading-box{
+                  @include background(linear-gradient(top, #f8e8b8, #ebd698));
+                  @include border-radius(15px);
+                  border-top: 2px solid #ffffff;
+                  border-bottom: 2px solid #c6b580;
+                  display: inline-block;
+                  text-align: center;
+                  &:hover{
+                    >.avg-section.x-hidden{
+                      display: block !important;
+                    }
+                  }
+                  .avg-section{
+                    position: absolute;
+                    top: 6px;
+                    .avg-box-left, .avg-box-right{
+                      font-size: 12px;
+                      color: $color;
+                      position: relative;
+                      z-index: 1;
+                      width: 60px;
+                    }
+                    .avg-box-left{
+                      @include border-radius(15px 0 0 15px);
+                      left: -49%;
+                    }
+                    .avg-box-right{
+                      @include border-radius(0 15px 15px 0);
+                      left: 30%;
+                    }
+                  }
+                }
+                .item-type{
+                  width: 97px;
+                  font-family: Arial;
+                  font-weight: normal;
+                  font-size: 13px;
+                  text-align: center;
+                  position: relative;
+                  display: block;
+                  margin: 2px auto;
+
+
+                  .item-type-title{
+                    padding-top: 13px;
+                    padding-bottom: 13px;
+                    color: #be8145;
+                    cursor: pointer;
+                  }
+                  .dropped-box{
+                    font-weight: bold !important;
+                    color: red !important;
+                  }
+
+                  .item-type-details{
+                    display: block;
+                    text-align: center;
+                    .item{
+                      @include border-radius(9px);
+                      font-size: 13px;
+                      color: #3989a1;
+                      padding: 9px 0px;
+                      width: 80px;
+                      display: block;
+                      margin: 4px auto 0px;
+                      text-decoration: none !important;
+                      height: auto !important;
+                      position: relative;
+                      overflow: visible;
+                      .avg-box-right{
+                        left: 17%;
+                      }
+                    }
+                    .dropped-item{
+                      color: #ffffff !important;
+                      @include background(linear-gradient(top, #D20029, #990015));
+                      border-bottom: 2px solid #990015 !important;
+                    }
+                  }
+                  .close-hover-bt{
+                    cursor: pointer;
+                    margin-top: 5px;
+                    border-top: 2px solid #c4aa6a;
+                    border-bottom: 2px solid #c4aa6a;
+                    width: 19px;
+                    height: 3px;
+                    display: block;
+                    margin: 4px auto 0px;
+                  }
                 }
               }
             }
