fixed market dropdown

--- a/Chalkable.Web/assets/jade/activities/apps/AppMarketSearch.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/AppMarketSearch.jade
@@ -1,3 +1,8 @@
 li(data-title = self.name, data-value = self.id.valueOf(), style="background: white")
-    +ActionLink('appmarket', 'details', self.id)=self.name
-        +Image(src=self.getPictureURL(self.smallPictureId, 74))
+    div.app-market-search
+        +ActionLink('appmarket', 'details', self.id).app-market-search-item
+            .img-container
+                +Image(src=self.getPictureURL(self.smallPictureId, 74)).app-icon
+            .app-name
+                div=self.name
+
