--- a/Chalkable.Web/assets/sass/partials/main/search/_common.scss
+++ b/Chalkable.Web/assets/sass/partials/main/search/_common.scss
@@ -91,6 +91,53 @@ ul.ui-autocomplete{
 
     }
 
+    >div.app-market-search{
+
+
+      .app-market-search-item{
+        background: url(images/app/search-divider.png) 0 bottom no-repeat;
+        height: 61px;
+        padding-top: 3px;
+        cursor: pointer;
+        padding: 0 5px;
+        background-color: #eee;
+
+
+        &:hover{
+          background-color: #fbfbfb;
+        }
+        .img-container{
+          display: table-cell;
+          background: url(images/app/photo-search-container.png) 0 bottom no-repeat;
+          text-align: center;
+          vertical-align: middle;
+          height: 51px;
+          width: 51px;
+          .app-icon{
+            width: 47px;
+            height: 47px;
+            margin: 1px 2px 0 2px;
+            display: inline-block;
+            vertical-align: middle;
+          }
+        }
+
+        .app-name{
+          padding-left: 10px;
+          font-weight: bold;
+          font-size: 16px;
+          color: #5B5B5B;
+          display: table-cell;
+          vertical-align: middle;
+          >DIV{
+            width: 93px;
+            overflow: hidden;
+            max-height: 40px;
+          }
+        }
+      }
+    }
+
   }
 }
 
