--- a/Chalkable.Web/assets/sass/partials/main/profile/_student_profile_grading.scss
+++ b/Chalkable.Web/assets/sass/partials/main/profile/_student_profile_grading.scss
@@ -9,22 +9,40 @@ BODY {
 
               .lr-toolbar{
                 height: auto;
+                overflow: visible;
                 .class-grading-view{
                   display: inline-block;
                   margin-left: 13px;
                   margin-top: 10px;
                   margin-bottom: 10px;
                   vertical-align: top;
+                  position: relative;
+                  .class-img{
+                    width: 30px;
+                    height: 17px;
+                    top: 2px;
+                    left: 71px;
+                    position: absolute;
+                    overflow: hidden;
+                  }
                 }
                 .prev-button, .next-button{
                   z-index: 2;
                   top: 20px;
                 }
+                .prev-button{
+                  left: -15px;
+                  background: url(images/profile/left-arrow.png) 0px 30px no-repeat;;
+                }
+                .next-button{
+                  right: -17px;
+                  background:  url(images/profile/right-arrow.png) 0px 30px no-repeat
+                }
               }
 
               .section-info{
                 width: 100%;
-
+                text-shadow: 0 1px 0 white;
                 .new-grading-box{
                   @include background(linear-gradient(top, #f8e8b8, #ebd698));
                   @include border-radius(15px);
@@ -37,6 +55,9 @@ BODY {
                       display: block !important;
                     }
                   }
+                  &.empty-box{
+                    visibility: hidden;
+                  }
                   .avg-section{
                     position: absolute;
                     top: 6px;
@@ -46,6 +67,9 @@ BODY {
                       position: relative;
                       z-index: 1;
                       width: 60px;
+                      span{
+                        padding-right: 5px;
+                      }
                     }
                     .avg-box-left{
                       @include border-radius(15px 0 0 15px);
@@ -54,6 +78,7 @@ BODY {
                     .avg-box-right{
                       @include border-radius(0 15px 15px 0);
                       left: 30%;
+
                     }
                   }
                 }
@@ -66,7 +91,7 @@ BODY {
                   position: relative;
                   display: block;
                   margin: 2px auto;
-
+                  cursor: pointer;
 
                   .item-type-title{
                     padding-top: 13px;
@@ -77,6 +102,14 @@ BODY {
                   .dropped-box{
                     font-weight: bold !important;
                     color: red !important;
+                    visibility: hidden;
+                  }
+                  .new-grading-box.dropped-item{
+                    background: red;
+                    color: #ffffff;
+                    .dropped-box{
+                      visibility: visible;
+                    }
                   }
 
                   .item-type-details{
