--- a/Chalkable.Web/assets/jade/activities/people/UsersList.jade
+++ b/Chalkable.Web/assets/jade/activities/people/UsersList.jade
@@ -15,7 +15,7 @@
                     label.people-search-img
                     label.people-search-close.opacity0
     .grid-container.loader-container
-        +RenderWith(self._model, chlk.templates.people.UsersGrid)
+        +RenderWith(self.getModel(), chlk.templates.people.UsersGrid)
 
 
 
