--- a/Chalkable.Web/assets/sass/partials/main/_buttons.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_buttons.scss
@@ -125,6 +125,7 @@
       > BUTTON {
         height: 47px;
         background: none;
+        outline: none;
         border: 0 none;
         background-color: transparent;
         background-repeat: no-repeat;
