--- a/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_details.scss
+++ b/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_details.scss
@@ -172,6 +172,42 @@ DIV.page {
                   text-decoration: none;
                   font-size: 22px;
                 }
+
+
+                .write-review-btn{
+                  border-radius: 3px;
+                  @include background(linear-gradient(top, #f4f4f4,#d9d9d9));
+                  border-top: 1px solid white;
+                  color: #747272;
+                  font-size: 13px;
+                  cursor: pointer;
+                  text-decoration: none;
+                  padding: 2px 6px 5px;
+                  @include box-shadow(0 1px 2px 1px #aaa);
+                  font-weight: bold;
+                  float: right;
+                  margin-right: 35px;
+                  &:hover{
+                    @include background(linear-gradient(top, #e6e6e6,#d5d5d5));
+                  }
+                }
+
+                .review-text{
+                  width: 435px;
+                  min-height: 50px;
+                  resize: vertical !important;
+                  padding: 5px 5px 40px;
+                  display: block;
+                  margin-top: 0px;
+                  margin-bottom: 0px;
+                  height: 113px;
+                  margin-top: 25px;
+                  margin-bottom: 15px;
+                }
+
+                button{
+                  font-size: 16px;
+                }
               }
 
             }
