fixed market details

--- a/Chalkable.Web/assets/jade/activities/apps/app-market-details.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-market-details.jade
@@ -19,6 +19,7 @@ devName = app.getDeveloperInfo().getName()
                 .add-review
                     textarea.review-text(placeholder="Write a review")
                     +Button().special-button.blue-button Submit
+                    span.cancel-btn Cancel
             .permissions
                 .permissions-group
                     .group-header.first This app is for:
